--- a/bin/st/st.1
+++ b/bin/st/st.1
@@ -120,7 +120,7 @@ st executes
 instead of the shell.  If this is used it
 .B must be the last option
 on the command line, as in xterm / rxvt.
-This option is only intended for compatibility,
+This option is only intended for compability,
 and all the remaining arguments are used as a command
 even without it.
 .SH SHORTCUTS
@@ -142,23 +142,30 @@ Print the full screen to the
 Print the selection to the
 .I iofile.
 .TP
-.B Ctrl-Shift-Page Up
+.B Alt-Shift-Page Up
 Increase font size.
 .TP
-.B Ctrl-Shift-Page Down
+.B Alt-Shift-Page Down
 Decrease font size.
 .TP
-.B Ctrl-Shift-Home
+.B Alt-Shift-Home
 Reset to default font size.
 .TP
-.B Ctrl-Shift-y
+.B Shift-Insert
 Paste from primary selection (middle mouse button).
 .TP
-.B Ctrl-Shift-c
+.B Alt-Shift-Insert
+Paste from clipboard selection.
+.TP
+.B Alt-Shift-c
 Copy the selected text to the clipboard selection.
 .TP
-.B Ctrl-Shift-v
+.B Alt-Shift-v
 Paste from the clipboard selection.
+.TP
+.B Alt-Ctrl
+Launch dmenu to enter a unicode codepoint and send the corresponding glyph
+to st.
 .SH CUSTOMIZATION
 .B st
 can be customized by creating a custom config.h and (re)compiling the source
